# CubeSolver

./: CMakeLists.txt  main.cpp
Cube Modelling/: RubiksCube.cpp  RubiksCube.h  RubiksCube1Darray.cpp  RubiksCube3Darray.cpp  RubiksCubeBitboard.cpp
Pattern Databases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
